--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "core-js": "2",
+    "@angular/animations": "^9.0.4",
+    "@angular/cdk": "^9.1.0",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
+    "core-js": "2.6.11",
+    "primeicons": "^2.0.0",
     "primeng": "^9.0.0",
-    "rxjs": "^6.4.0",
-    "zone.js": "^0.9.1"
+    "rxjs": "6.5.4",
+    "tslib": "^1.9.0 ^1.10.0",
+    "zone.js": "0.9.1"
   },
   "scripts": {
     "ng": "ng",
